added information to pages

--- a/_config.yml
+++ b/_config.yml
@@ -5,9 +5,9 @@
 # Site
 title: Lambda One
 subtitle:
-description:
+description: Science and technology produce great power, and as scientists and engineers, it is our responsibility to harness such power in favor of protecting and extending life. Lambda One is a call to be an active agent for a better future for all; we are a community with a high appreciation for the study of mathematics and computer science, and its application on solving some of the complex challenges that humanity faces. We focus on forming elite system designers and programmers and channel their skills on projects of positive impact.
 keywords:
-author: The Lambda One Members 
+author: Lambda One 
 language: en
 timezone: Europe/Amsterdam
 
