--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ timezone: Europe/Amsterdam
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: lambdaone-io.github.io
+url: www.lambdaone.io
 root: /
 permalink: :year/:month/:day/:title/
 permalink_defaults:
