restored git repo url

--- a/_config.yml
+++ b/_config.yml
@@ -79,6 +79,6 @@ theme: cactus
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type: git
-  repo: git@github.com:lambdaone-io/lambdaone-io.github.io.git
+  repo: https://github.com/lambdaone-io/lambdaone-io.github.io
   branch: master
   message: "Site updated: {{ now('YYYY-MM-DD HH:mm:ss') }}"
