--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # Site
 title: Lambda One
 subtitle:
-description: Science and technology produce great power, and as scientists and engineers, it is our responsibility to harness such power in favor of protecting and extending life. Lambda One is a call to be an active agent for a better future for all; we are a community with a high appreciation for the study of mathematics and computer science, and its application on solving some of the complex challenges that humanity faces. We focus on forming elite system designers and programmers and channel their skills on projects of positive impact.
+description: We believe that the world's biggest challenges can be defeated using the power of reason, science, and collaboration. We form elite system designers and channel their skills to the development of impactful projects. By offering free training and educational content, by developing internal projects, and by collaborating with communities and organizations.
 keywords:
 author: Lambda One 
 language: en
