--- a/_config.yml
+++ b/_config.yml
@@ -5,9 +5,9 @@
 # Site
 title: Lambda One
 subtitle:
-description: We believe that the world's biggest challenges can be defeated using the power of reason, science, and collaboration. We form elite system designers and channel their skills to the development of impactful projects. By offering free training and educational content, by developing internal projects, and by collaborating with communities and organizations.
+description: "_Mathematics, software development, system designing... these are the most powerful tools nowadays, and we can become an unstoppable force if we nourish the basic values of collaboration._ \n\nWe believe that the world's biggest challenges can be solved using the power of reason, technology and **collaboration**. We form elite system designers and channel their skills to the development of impactful projects. By offering free training and educational content, by developing internal projects, and collaborating with communities and organizations."
 keywords:
-author: Lambda One 
+author: The Lambda One members 
 language: en
 timezone: Europe/Amsterdam
 
