--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # Site
 title: Lambda One
 subtitle:
-description: "_Mathematics, software development, system designing... these are the most powerful tools nowadays, and we can become an unstoppable force if we nourish the basic values of collaboration._ \n\nWe believe that the world's biggest challenges can be solved using the power of reason, technology and **collaboration**. We form elite system designers and channel their skills to the development of impactful projects. By offering free training and educational content, by developing internal projects, and collaborating with communities and organizations."
+description: "We are a society which believes in technical excellence, knowledge sharing, and growing the functional programming community. Members of Lambda one give contracting services of the highest quality, training and knowledge sharing sessions with passion, and make a constant effort on growing a healthy community."
 keywords:
 author: The Lambda One members 
 language: en
